Moved the userStop variable to Game so changed the corresponding tests and edited README.md